<resources>
    <string name="app_name">GeekBrains_HW2</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">+</string>
    <string name="button5">4</string>
    <string name="button6">5</string>
    <string name="button7">6</string>
    <string name="button8">-</string>
    <string name="button9">7</string>
    <string name="button10">8</string>
    <string name="button11">9</string>
    <string name="button12">*</string>
    <string name="button13">0</string>
    <string name="button14">.</string>
    <string name="button15">=</string>
    <string name="button16">/</string>
    <string name="buttonAC">AC</string>
    <string name="buttonSquare">X2</string>
    <string name="buttonSqrt">sX</string>
    <string name="buttonDivX">1/x</string>
</resources>