<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:background="@color/gray_for_calc">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom|right"
        android:text="1234567"
        android:textAlignment="gravity"
        android:textIsSelectable="true"
        android:textSize="70sp"
        android:fontFamily="@font/digital_7"
        android:paddingRight="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/test_pic"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:columnCount="4"
        android:rowCount="3"
        android:layout_gravity="center"
        android:useDefaultMargins="true"
        android:background="@color/gray_for_calc"
        android:paddingTop="5dp"
        >


        <info.hoang8f.widget.FButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/button"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/button2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/button3"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/button4"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button5"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button6"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button7"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button8"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button9"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/button10"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button11"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/button12"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button13"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button14"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button15"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/button16"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/fbutton_color_midnight_blue"
            fbutton:buttonColor = "@color/fbutton_color_asbestos"/>
    </GridLayout>

</LinearLayout>